[package]
name = "downloader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
indicatif = { version = "0.17.8", features = ["improved_unicode"] }
log = "0.4.21"
miette = { version = "7.2.0", features = ["fancy"] }
simplelog = "0.12.2"
ureq = "2.9.7"
url = "2.5.0"

[profile.release]
strip = true
